# Image_Processors_Module

./: .gitignore  .gitmodules  Fill_In_Segments_sitk.py  Image_Processors_DataSet.py  Image_Processors_Keras_Generator.py  Image_Processors_TFRecord.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
src/Processors/: KerasGeneratorProcessors.py  MakeTFRecordProcessors.py  TFDataSetProcessors.py  TFRecordMakeProcessors.py  TFRecordWriter.py  __init__.py
src/Processors/PyTorchDataSets/: ConstantProcessors.py  RelativeProcessors.py
src/Processors/TFDataSets/: ConstantProcessors.py  RelativeProcessors.py  SpecialProcessors.py  TFGenerator.py
